crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__for__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/syntax.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (for
      (var c (local @1) 0.0)
      (< (local c @1) 3.0)
      ∅
      (print (= (local c @1) (+ (local c @1) 1.0))))
   (for
      (var a (local @1) 0.0)
      (< (local a @1) 3.0)
      (= (local a @1) (+ (local a @1) 1.0))
      (block
         (print (local a @1))))
   (fun foo (global @1) [] []
      (block
         (for
            ∅
            ∅
            ∅
            (return "done"))))
   (print (call +2 (global foo @1)))
   (var i (global @2) 0.0)
   (for
      ∅
      (< (global i @2) 2.0)
      (= (global i @2) (+ (global i @2) 1.0))
      (print (global i @2)))
   (fun bar (global @3) [] []
      (block
         (for
            (var i (local @0) 0.0)
            ∅
            (= (local i @0) (+ (local i @0) 1.0))
            (block
               (print (local i @0))
               (if
                  (>= (local i @0) 2.0)
                  (return ∅)
                  ∅)))))
   (expr (call +4 (global bar @3)))
   (for
      (var i (local @4) 0.0)
      (< (local i @4) 2.0)
      ∅
      (block
         (print (local i @4))
         (expr (= (local i @4) (+ (local i @4) 1.0)))))
   (for
      ∅
      false
      ∅
      (if
         true
         (expr 1.0)
         (expr 2.0)))
   (for
      ∅
      false
      ∅
      (while
         true
         (expr 1.0)))
   (for
      ∅
      false
      ∅
      (for
         ∅
         ∅
         ∅
         (expr 1.0))))

----- stderr -----
